fix(styling) Increment z-index for headers so that buttons on sub schema forms (and textareas in Chrome) don't scroll above

--- a/less/forms-angular-bs-common.less
+++ b/less/forms-angular-bs-common.less
@@ -20,6 +20,7 @@
 
 .page-header {
   padding-left: 20px;
+  z-index: 2;
 }
 
 .header-rhs {
